[gd_scene load_steps=30 format=3 uid="uid://dno7xf8kokhh0"]

[ext_resource type="Script" uid="uid://b2yavya7bl4q4" path="res://object/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://b34n7xq0sotek" path="res://playerv2.png" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://b07y3ppi732f6" path="res://sound/sound/Sfx_Fireball.wav" id="3_qbh5c"]
[ext_resource type="AudioStream" uid="uid://cdsr2xbqstds4" path="res://sound/sound/Sfx_PlayerDeath.wav" id="4_qbh5c"]
[ext_resource type="AudioStream" uid="uid://cpv60jub0iwwq" path="res://sound/sound/Sfx_Jump1.wav" id="5_12epm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(9, 21)

[sub_resource type="Animation" id="Animation_i3pqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_onrkg"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, -16), Vector2(1, -18.5), Vector2(1, -14.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.14706), Vector2(1, 0.911765)]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.199016, 0.402872),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, -13.5), Vector2(1, -17.9754), Vector2(1, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.199016, 0.402872),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.852941), Vector2(1, 1.29267), Vector2(1, 0.970588)]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.201436, 0.300037),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 6, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -18), Vector2(1, -16), Vector2(1, -18), Vector2(1, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.941176), Vector2(1, 0.991367), Vector2(1, 0.911068), Vector2(1, 0.992977)]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_do_fireball"
}, {
"args": [],
"method": &"_shoot_anim_end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sweqy"]
_data = {
&"RESET": SubResource("Animation_i3pqv"),
&"idle": SubResource("Animation_onrkg"),
&"jump": SubResource("Animation_sweqy"),
&"move": SubResource("Animation_hqtel"),
&"shoot": SubResource("Animation_2hs0m")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_onrkg"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3pqv"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqtel"]
animation = &"move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sweqy"]
animation = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2hs0m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1jxqw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dw050"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b26j0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7ghd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nvl01"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ivps1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urp6f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bwjto"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_606se"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u1c27"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_op7ga"]
states/idle/node = SubResource("AnimationNodeAnimation_onrkg")
states/idle/position = Vector2(274, 44)
states/jump/node = SubResource("AnimationNodeAnimation_i3pqv")
states/jump/position = Vector2(266, 234)
states/move/node = SubResource("AnimationNodeAnimation_hqtel")
states/move/position = Vector2(431, 218)
states/shoot/node = SubResource("AnimationNodeAnimation_sweqy")
states/shoot/position = Vector2(656, 218)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_2hs0m"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_1jxqw"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_dw050"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_b26j0"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_n7ghd"), "idle", "shoot", SubResource("AnimationNodeStateMachineTransition_nvl01"), "shoot", "idle", SubResource("AnimationNodeStateMachineTransition_ivps1"), "move", "shoot", SubResource("AnimationNodeStateMachineTransition_urp6f"), "shoot", "move", SubResource("AnimationNodeStateMachineTransition_bwjto"), "jump", "move", SubResource("AnimationNodeStateMachineTransition_606se"), "move", "jump", SubResource("AnimationNodeStateMachineTransition_u1c27")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 13
script = ExtResource("1_onrkg")
jump_height = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(1, -16)
texture = ExtResource("2_onrkg")
hframes = 3
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sweqy")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_op7ga")
anim_player = NodePath("../AnimationPlayer")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_i3pqv")
debug_color = Color(0.985438, 0, 0.33376, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.999999, -11)
scale = Vector2(2, 2.1)

[node name="fireposition" type="Marker2D" parent="."]

[node name="FireballSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qbh5c")
volume_db = 15.0

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qbh5c")
volume_db = 15.0

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_12epm")
volume_db = 15.0

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
